--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,22 @@
-Flask==3.0.2
-Flask_Cors==4.0.0
-langchain==0.1.8
-langchain_community==0.0.21
-langchain_openai==0.0.6
-openai==1.12.0
-python-dotenv==1.0.1
-pytube==15.0.0
-youtube_transcript_api==0.6.2
-chromadb==0.4.22
+# Flask==3.0.2
+# Flask_Cors==4.0.0
+# langchain==0.1.8
+# langchain_community==0.0.21
+# google-generativeai
+# langchain-google-genai
+# python-dotenv==1.0.1
+# pytube==15.0.0
+# youtube_transcript_api==0.6.2
+# chromadb==0.4.22
+
+
+Flask
+Flask_Cors
+langchain
+langchain_community
+google-generativeai
+langchain-google-genai
+python-dotenv
+pytube
+youtube_transcript_api
+chromadb
